Update function js sum Vowels

--- a/html/js.html
+++ b/html/js.html
@@ -88,7 +88,23 @@
                             </form>
                             <label id="vowelsResult"></label>
                         </div>
-                        <li>Total de repeticiones de las vocales</li>
+
+                        <div>
+                            <li>Total de repeticiones de las vocales:</li>
+                            <form>
+                                <input
+                                    type="text"
+                                    name="Text"
+                                    placeholder="Digite la cadena a evaluar"
+                                    id="vowelsTextTwo"
+                                />
+                                <button type="button" onclick="vowelsSum()">
+                                    Validar
+                                </button>
+                                <p>Resultado:</p>
+                            </form>
+                            <label id="vowelsSumResult"></label>
+                        </div>
                     </ol>
                 </div>
             </section>
