Add Ajax function

--- a/html/ajax.html
+++ b/html/ajax.html
@@ -31,6 +31,49 @@
             <section id="ajax">
                 <div class="ajax">
                     <h1>Ajax</h1>
+                    <ol>
+                        <div>
+                            <li>Url de la página:</li>
+                            <button type="button" onclick="url()">
+                                Obtener URL
+                            </button>
+                            <p>Resultado:</p>
+                            <label id="urlResult"></label>
+                        </div>
+
+                        <div>
+                            <li>Contenido:</li>
+                            <button type="button" onclick="url()">
+                                Obtener
+                            </button>
+                            <p>Resultado:</p>
+                            <label id="urlResult"></label>
+                        </div>
+                        <div>
+                            <li>Estados:</li>
+                            <button type="button" onclick="url()">
+                                Obtener
+                            </button>
+                            <p>Resultado:</p>
+                            <label id="urlResult"></label>
+                        </div>
+                        <div>
+                            <li>Cabeceras:</li>
+                            <button type="button" onclick="url()">
+                                Obtener
+                            </button>
+                            <p>Resultado:</p>
+                            <label id="urlResult"></label>
+                        </div>
+                        <div>
+                            <li>Código estado:</li>
+                            <button type="button" onclick="url()">
+                                Obtener
+                            </button>
+                            <p>Resultado:</p>
+                            <label id="urlResult"></label>
+                        </div>
+                    </ol>
                 </div>
             </section>
         </main>
