Update Ajax function

--- a/html/ajax.html
+++ b/html/ajax.html
@@ -34,7 +34,7 @@
                     <ol>
                         <div>
                             <li>Url de la página:</li>
-                            <button type="button" onclick="url()">
+                            <button type="button" onclick="urlCheck()">
                                 Obtener URL
                             </button>
                             <p>Resultado:</p>
@@ -43,35 +43,35 @@
 
                         <div>
                             <li>Contenido:</li>
-                            <button type="button" onclick="url()">
+                            <button type="button" onclick="contentCheck()">
                                 Obtener
                             </button>
                             <p>Resultado:</p>
-                            <label id="urlResult"></label>
+                            <label id="contentResult"></label>
                         </div>
                         <div>
                             <li>Estados:</li>
-                            <button type="button" onclick="url()">
+                            <button type="button" onclick="stateCheck()">
                                 Obtener
                             </button>
                             <p>Resultado:</p>
-                            <label id="urlResult"></label>
+                            <label id="stateResult"></label>
                         </div>
                         <div>
                             <li>Cabeceras:</li>
-                            <button type="button" onclick="url()">
+                            <button type="button" onclick="headCheck()">
                                 Obtener
                             </button>
                             <p>Resultado:</p>
-                            <label id="urlResult"></label>
+                            <label id="headResult"></label>
                         </div>
                         <div>
                             <li>Código estado:</li>
-                            <button type="button" onclick="url()">
+                            <button type="button" onclick="codeCheck()">
                                 Obtener
                             </button>
                             <p>Resultado:</p>
-                            <label id="urlResult"></label>
+                            <label id="codeResult"></label>
                         </div>
                     </ol>
                 </div>
@@ -87,5 +87,6 @@
                 </p>
             </div>
         </section>
+        <script src="../js/app.js"></script>
     </body>
 </html>
