Update css file: add neovim logo

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
             <!--navbar-->
             <nav class="navbar" id="navbar">
                 <div class="nav-img">
-                    <img
-                        src="images/logoBlog.png"
-                        class="nav-logo"
-                        alt="logoBlog"
-                    />
+                    <a href="index.html">
+                        <img
+                            src="images/logoBlog.png"
+                            class="nav-logo"
+                            alt="logoBlog"
+                        />
+                    </a>
                 </div>
                 <div class="nav-links">
                     <a href="html/js.html" class="nav-link">JavaScript</a>
@@ -29,30 +31,29 @@
             <!--Inicio-->
             <section id="inicio">
                 <div class="inicio">
-                    <h1>Datos Basicos</h1>
+                    <h1>Andrea Salazar Corrales</h1>
                     <div class="inicio-ul">
                         <ul>
                             <li>
-                                <h3>Nombres: <span>Andrea</span></h3>
-                            </li>
-                            <li>
-                                <h3>
-                                    Apellidos: <span>Salazar Corrales</span>
-                                </h3>
-                            </li>
-                            <li>
-                                <h3>Editor de código: <span>Neovim</span></h3>
+                                <h3>Editor de código:</h3>
+                                <a href="https://neovim.io/" target="_blank">
+                                    <img
+                                        src="images/neovim-logo-1color.svg"
+                                        alt="Neovim"
+                                    />
+                                </a>
                             </li>
                             <li>
                                 <h3>
                                     Github:
-                                    <span
-                                        ><a class="inicioGitLink"
-                                            href="https://soyandreaco.github.io/basicBlog/"
+                                    <p>
+                                        <a
+                                            class="inicioGitLink"
+                                            href="https://github.com/soyandreaco/basicJS"
                                             target="_blank"
-                                            >Blog Github</a
-                                        ></span
-                                    >
+                                            >SoyAndreaCO</a
+                                        >
+                                    </p>
                                 </h3>
                             </li>
                         </ul>
