Update css file add style of ajax.htmlOC

--- a/html/ajax.html
+++ b/html/ajax.html
@@ -30,7 +30,7 @@
             <!--Inicio-->
             <section id="ajax">
                 <div class="ajax">
-                    <h1>Ajax</h1>
+                    <h1>AJAX</h1>
                     <h4>Obtener información de la página con ajax</h4>
                     <button type="button" onclick="urlCheck()">
                         Obtener datos
