--- a/index.html
+++ b/index.html
@@ -44,17 +44,10 @@
                                 </a>
                             </li>
                             <li>
-                                <h3>
-                                    Github:
-                                    <p>
-                                        <a
-                                            class="inicioGitLink"
-                                            href="https://github.com/soyandreaco/basicJS"
-                                            target="_blank"
-                                            >SoyAndreaCO</a
-                                        >
-                                    </p>
-                                </h3>
+                                <button class="githubButton"
+                                    onclick="window.open('https://github.com/soyandreaco/basicJS','_blank')">
+                                    GITHUB
+                                </button>
                             </li>
                         </ul>
                     </div>
